Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112326

[REG: 5->6] Cannot add items with user data to QComboBox that has QSortFilterProxyModel

    XMLWordPrintable

Details

    • 936fe007e (dev), 6c2355f45 (6.5)

    Description

      Without user data being set, it works fine.

      Attachments

        1. qtbug112326.zip
          1 kB
          Joni Poikelin
        2. qtbug112326_log.txt
          3 kB
          Friedemann Kleint
        3. qtbug112326_2.zip
          1 kB
          Friedemann Kleint
        4. qtbug112326_diag.diff
          5 kB
          Friedemann Kleint
        5. qtbug112326_5_diag.diff
          5 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-112326
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes