src/gui/itemmodels/qstandarditemmodel_p.h
@@ -32,8 +32,10 @@ class QStandardItemData
 {
 public:
     inline QStandardItemData() : role(-1) {}
-    inline QStandardItemData(int r, const QVariant &v) : role(r), value(v) {}
-    inline QStandardItemData(const std::pair<const int&, const QVariant&> &p) : role(p.first), value(p.second) {}
+    inline QStandardItemData(int r, const QVariant &v) :
+          role(r == Qt::EditRole ? Qt::DisplayRole : r), value(v) {}
+    inline QStandardItemData(const std::pair<const int&, const QVariant&> &p) :
+          role(p.first == Qt::EditRole ? Qt::DisplayRole : p.first), value(p.second) {}
     int role;
     QVariant value;
     inline bool operator==(const QStandardItemData &other) const { return role == other.role && value == other.value; }
